# patchdiff

./: .gitignore  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml  setup.cfg
.github/workflows/: benchmark.yml  ci.yml
benchmarks/: benchmark.py  compare_runs.py
docs/: index.md
docs/getting-started/: installation.md  quick-start.md
docs/guide/: applying.md  diffing.md  gotchas.md  observ.md  pointers.md  produce.md  serialization.md
docs/internals/: architecture.md
docs/reference/: api.md
examples/: in_place_example.py  observ_example.py  produce_example.py
patchdiff/: __init__.py  apply.py  diff.py  pointer.py  produce.py  serialize.py  traps.py  types.py
tests/: test_all.py  test_apply.py  test_diff.py  test_diff_prefix_suffix.py  test_observ_integration.py  test_pointer.py  test_produce.py  test_produce_core.py  test_produce_dict.py  test_produce_list.py  test_produce_live_paths.py  test_produce_properties.py  test_produce_proxy_leak.py  test_produce_reactive_deepcopy.py  test_produce_set.py  test_properties.py  test_proxy.py  test_rfc6902_corpus.py  test_serialize.py
