[project]
name = "patchdiff"
version = "0.3.5"
description = "MIT"
authors = [
    { name = "Korijn van Golen", email = "korijn@gmail.com" },
    { name = "Berend Klein Haneveld", email = "berendkleinhaneveld@gmail.com" },
]
requires-python = ">=3.8"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/fork-tongue/patchdiff"

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-watch",
    "pytest-benchmark",
]

[tool.ruff.lint]
extend-select = [
    "F",    # Pyflakes (default)
    "I",    # isort imports
    "N",    # pep8-naming
    "T10",  # flake8-debugger
    "T20",  # flake8-print
    "RUF",  # ruff
]

[tool.ruff.lint.per-file-ignores]
"patchdiff/__init__.py" = ["F401"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
