[project]
name = "patchdiff"
version = "1.0.0"
description = "Bidirectional, JSON-patch-compliant diffs between Python data structures"
authors = [
    { name = "Korijn van Golen", email = "korijn@gmail.com" },
    { name = "Berend Klein Haneveld", email = "berendkleinhaneveld@gmail.com" },
]
requires-python = ">=3.13"
readme = "README.md"
license = "MIT"
classifiers = ["Typing :: Typed"]

[project.urls]
Homepage = "https://github.com/fork-tongue/patchdiff"

[dependency-groups]
dev = [
    "ruff",
    "hypothesis",
    "pytest",
    "pytest-cov",
    "pytest-watch",
    "pytest-benchmark",
    "ty",
]
ruff = ["ruff"]
ty = ["ty"]
observ = [
    "observ>=0.18.0",
]
docs = [
    "mkdocs>=1,<2",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[tool.ruff.lint]
extend-select = [
    "F",    # Pyflakes (default)
    "I",    # isort imports
    "N",    # pep8-naming
    "T10",  # flake8-debugger
    "T20",  # flake8-print
    "UP",   # pyupgrade (keep syntax modern for the supported Python floor)
    "RUF",  # ruff
]

[tool.ruff.lint.per-file-ignores]
"patchdiff/__init__.py" = ["F401"]
# command line tool that reports through print
"benchmarks/compare_runs.py" = ["T201"]

[tool.ty.src]
include = ["patchdiff"]

[tool.ty.environment]
# Match the oldest supported Python version (requires-python), so
# that the type checker catches use of newer typing features
python-version = "3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
# GC pauses during timed rounds are a major source of benchmark noise,
# so garbage collection is disabled while benchmarks are being timed.
addopts = "--benchmark-columns='median, mean, stddev, rounds' --benchmark-disable-gc"
